# protein-feature-pipeline

./: .gitattributes  .gitignore  CHANGELOG.md  LICENSE  Makefile  README.md  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
docs/: USER_MANUAL.md
examples/: README.md
examples/pipeline_7rfw/: encoded.npz  schema.json  validation_report.json
examples/pocket_7rfw/: complex_encoded.npz  complex_summary.json
examples/stepwise_7rfw/: ANALYSIS_REPORT.md  analysis_stats.json
src/protein_features/: __init__.py  main.py  py.typed
src/protein_features/core/: __init__.py  _log.py  constants.py  exceptions.py  geometry.py  io.py
src/protein_features/s1_feature_extraction/: __init__.py  extractor.py
src/protein_features/s2_encoding/: __init__.py  encoder.py
src/protein_features/s3_decoding/: __init__.py  decoder.py
src/protein_features/s4_validation/: __init__.py  validate.py
src/protein_features/s5_visualization/: __init__.py  analysis.py  visualize.py
src/protein_features/s6_pocket_ligand/: __init__.py  pocket.py
src/protein_features/tools/: __init__.py  synthetic.py
src/protein_features/web/: __init__.py  app.py
src/protein_features/web/static/: index.html
tests/: test_roundtrip.py  test_web.py
