[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "protein-feature-pipeline"
version = "1.1.0"
description = "Feature extraction and encode/decode pipeline for structure-based generative learning on protein PDB files."
readme = "README.md"
requires-python = ">=3.9"
license = { file = "LICENSE" }
authors = [{ name = "Swati Chaudhari" }]
keywords = ["protein", "pdb", "feature-engineering", "generative-models",
            "structural-biology", "graph-neural-networks"]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering :: Bio-Informatics",
]
# Core runtime dependency only — the pipeline runs on numpy alone.
dependencies = ["numpy>=1.23"]

[project.urls]
Homepage = "https://github.com/swatizambre/protein-feature-pipeline"
Repository = "https://github.com/swatizambre/protein-feature-pipeline"
Author = "https://github.com/swatizambre"

[project.optional-dependencies]
viz = ["matplotlib>=3.5"]
analysis = ["pandas>=2.0", "scipy>=1.10", "scikit-learn>=1.2",
            "seaborn>=0.12", "matplotlib>=3.5", "tabulate>=0.9"]
bio = ["biopython>=1.81"]          # enables the BioPython parser + DSSP path
chem = ["rdkit>=2022.9"]            # enables canonical SMILES for the ligand in pocket.py
web = ["fastapi>=0.110", "uvicorn[standard]>=0.27", "python-multipart>=0.0.9"]
dev = ["pytest>=7.0", "ruff>=0.1", "black>=23.0", "build>=1.0", "httpx>=0.27"]
# Recommended one-shot install for cloning the repo
all = [
    "matplotlib>=3.5",
    "pandas>=2.0", "scipy>=1.10", "scikit-learn>=1.2",
    "seaborn>=0.12", "tabulate>=0.9",
    "biopython>=1.81",
    "fastapi>=0.110", "uvicorn[standard]>=0.27", "python-multipart>=0.0.9",
    "pytest>=7.0", "ruff>=0.1", "black>=23.0", "build>=1.0", "httpx>=0.27",
]

[project.scripts]
protein-features = "protein_features.main:main"
protein-features-analyze = "protein_features.s5_visualization.analysis:main"
protein-features-pocket = "protein_features.s6_pocket_ligand.pocket:main"
protein-features-make-test-pdb = "protein_features.tools.synthetic:main"
protein-features-web = "protein_features.web.app:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
protein_features = ["web/static/*", "py.typed"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]

[tool.ruff]
line-length = 100
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "W"]
ignore = ["E203"]

[tool.black]
line-length = 100
